K8s/mapviewer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mapviewer
  labels:
    app: mapviewer
spec:
  replicas: 1
  template:
    metadata:
      name: mapviewer
      labels:
        app: mapviewer
    spec:
      containers:
        - name: mapviewer
          image: nexus-docker-public-hosted.ossim.io/mapviewer
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: mapviewer
