K8s/mapviewer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapviewer
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: mapviewer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
